--- a/WebThuvien/Views/Home/SliderSection.cshtml
+++ b/WebThuvien/Views/Home/SliderSection.cshtml
@@ -7,7 +7,7 @@
     <div class="carousel-inner">
         <div class="item active">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/header-slide.jpg" />
+                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
@@ -23,7 +23,7 @@
         </div>
         <div class="item">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/header-slide.jpg" />
+                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
@@ -39,7 +39,7 @@
         </div>
         <div class="item">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/header-slide.jpg" />
+                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
