--- a/WebThuvien/Views/Home/FeaturesSection.cshtml
+++ b/WebThuvien/Views/Home/FeaturesSection.cshtml
@@ -4,66 +4,41 @@
 <section class="features">
     <div class="container">
         <ul>
-            <li class="yellow-hover">
-                <div class="feature-box">
-                    <i class="yellow"></i>
-                    <h3>Books</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="yellow" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="light-green-hover">
-                <div class="feature-box">
-                    <i class="light-green"></i>
-                    <h3>eBooks</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="light-green" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="blue-hover">
-                <div class="feature-box">
-                    <i class="blue"></i>
-                    <h3>DVDs</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="blue" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="red-hover">
-                <div class="feature-box">
-                    <i class="red"></i>
-                    <h3>Magazines</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="red" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="violet-hover">
-                <div class="feature-box">
-                    <i class="violet"></i>
-                    <h3>Audio</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="violet" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
-            <li class="green-hover">
-                <div class="feature-box">
-                    <i class="green"></i>
-                    <h3>eAudio</h3>
-                    <p>Những cuốn sách được chọn lọc kĩ càng.</p>
-                    <a class="green" href="#">
-                        Xem chi tiết <i class="fa fa-long-arrow-right"></i>
-                    </a>
-                </div>
-            </li>
+            @{ var index = 1;}
+            @foreach (var item in ViewBag.Loaisach)
+            {
+                if (index % 2 == 0)
+                {
+                    <li class="light-green-hover">
+                        <div class="feature-box">
+                            <i class="@item.KIHIEU"></i>
+                            <h3>@item.TENTHELOAI</h3>
+                            <p>@item.GHICHU.</p>
+
+                            <a class="light-green" href="/Sach/Search?TheLoaiSach">
+                                Xem chi tiết <i class="fa fa-long-arrow-right"></i>
+                            </a>
+                        </div>
+                    </li>
+                }
+
+                else
+                {
+                    <li class="green-hover">
+                        <div class="feature-box">
+                            <i class="@item.KIHIEU"></i>
+                            <h3>@item.TENTHELOAI</h3>
+                            <p>@item.GHICHU.</p>
+                            <a class="green" href="/Sach/Search?TheLoaiSach">
+                                Xem chi tiết <i class="fa fa-long-arrow-right"></i>
+                            </a>
+                        </div>
+                    </li>
+                }
+
+                index++;
+            }
+            
         </ul>
     </div>
 </section>
