--- a/WebThuvien/Views/Sach/Index.cshtml
+++ b/WebThuvien/Views/Sach/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Trang chủ";
+    ViewBag.Title = "Thư viện sách";
     Layout = "~/Views/Shared/_LayoutHomeClient.cshtml";
 }   
-@Html.Action("HeaderSection", "Home"); 
-@Html.Action("SliderSection", "Home"); 
+
  <!-- Start: Products Section -->
 <div id="content" class="site-content">
     <div id="primary" class="content-area">
@@ -11,7 +10,7 @@
             <div class="books-full-width">
                 <div class="container">
                     <!-- Start: Search Section -->
-                    @Html.Action("SearchSection", "Home"); 
+
                     <!-- End: Search Section -->
 
                     <div class="filter-options margin-list">
