--- a/WebThuvien/Views/Home/SliderSection.cshtml
+++ b/WebThuvien/Views/Home/SliderSection.cshtml
@@ -1,13 +1,15 @@
 ﻿@{
     Layout = null;
 }  
+
+
   <!-- Start: Slider Section -->
 <div data-ride="carousel" class="carousel slide" id="home-v1-header-carousel">
     <!-- Carousel slides -->
     <div class="carousel-inner">
         <div class="item active">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
+                <img width="500" height="600" class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@ViewBag.sach1.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
@@ -23,7 +25,7 @@
         </div>
         <div class="item">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
+                <img class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@ViewBag.sach2.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
@@ -39,7 +41,7 @@
         </div>
         <div class="item">
             <figure>
-                <img alt="Home Slide" src="~/Content/ClientContent/images/header-slider/home-v2/@ViewBag.sach1.HINHANH" />
+                <img class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@ViewBag.sach3.HINHANH" />
             </figure>
             <div class="container">
                 <div class="carousel-caption">
