--- a/WebThuvien/Views/Sach/Chitietsach.cshtml
+++ b/WebThuvien/Views/Sach/Chitietsach.cshtml
@@ -1,6 +1,6 @@
 ﻿@using WebThuvien.Models.Entity;
 @{
-    ViewBag.Title = "Chitietsach";
+    ViewBag.Title = "Chi tiết sách : "+ ViewBag.sach.TENSACH;
     Layout = "~/Views/Shared/_LayoutHomeClient.cshtml";
 }
 
@@ -244,6 +244,7 @@
     </div>
 </div>
 <!-- End: Products Section -->
+
 <div class="booksmedia-fullwidth">
     <div class="container">
         <h2 class="section-title text-center">Popular Items</h2>
