--- a/WebThuvien/Views/Sach/Timkiemsach.cshtml
+++ b/WebThuvien/Views/Sach/Timkiemsach.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "Timkiemsach";
+    ViewBag.Title = "Tìm kiếm : "+ViewBag.noidungnhap + " - Trang "+ViewBag.currentPage ;
+    ViewBag.noidung = ViewBag.noidungnhap;
     Layout = "~/Views/Shared/_LayoutHomeClient.cshtml";
 }
 
@@ -66,10 +67,10 @@
                                 <li>
                                     <div class="book-list-icon light-green-icon"></div>
                                     <figure>
-                                        <a href="/sach/chitietsach"><img src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book"></a>
+                                        <a href="/Sach/Chitietsach?MaSach=@item.MASACH"><img src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book"></a>
                                         <figcaption>
                                             <header>
-                                                <h4><a href="/sach/chitietsach">@item.TENSACH</a></h4>
+                                                <h4><a href="/Sach/Chitietsach?MaSach=@item.MASACH">@item.TENSACH</a></h4>
                                                 <p><strong>Author:</strong>  F. Scott Fitzgerald</p>
                                                 <p><strong>ISBN:</strong>  9781581573268</p>
                                             </header>
@@ -112,18 +113,53 @@
                                     </figure>
                                 </li>
                             }
-
+                            
                         </ul>
+                        @if (@ViewBag.countPage == 0)
+                        {
+                            <h1>Không tìm thấy kết quả nào!!</h1>
+                        }
                     </div>
                     <nav class="navigation pagination text-center">
                         <h2 class="screen-reader-text">Posts navigation</h2>
                         <div class="nav-links">
-                            <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Previous</a>
-                            <a class="page-numbers" href="#.">1</a>
-                            <span class="page-numbers current">2</span>
-                            <a class="page-numbers" href="#.">3</a>
-                            <a class="page-numbers" href="#.">4</a>
-                            <a class="next page-numbers" href="#.">Next <i class="fa fa-long-arrow-right"></i></a>
+                                @{
+                                    if (ViewBag.currentPage != 1)
+                                    {
+                                        int prevPage = @ViewBag.currentPage - 1;
+                                    <a class="prev page-numbers" href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@prevPage"><i class="fa fa-long-arrow-left"></i> Trang trước</a>
+                                    }
+                                    else
+                                    {
+                                    <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Trang trước</a>
+                                    }
+
+                            }
+                            @for (int i = 1; i <= ViewBag.countPage; i++)
+                            {
+                                if (@i == ViewBag.currentPage)
+                                {
+                                    <a href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@i"><span class="page-numbers current">@i</span></a>
+
+                                }
+                                else
+                                {
+                                    <a href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@i"><span class="page-numbers">@i</span></a>
+                                }
+                            }
+                            @{
+                                if (@ViewBag.currentPage != @ViewBag.countPage)
+                                {
+                                    int nextPage = @ViewBag.currentPage + 1;
+                                    <a class="next page-numbers" href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@nextPage">Trang sau <i class="fa fa-long-arrow-right"></i></a>
+
+                                }
+                                else
+                                {
+                                    <a class="next page-numbers" href="#.">Trang sau <i class="fa fa-long-arrow-right"></i></a>
+
+                                }
+                            }
                         </div>
                     </nav>
                 </div>
@@ -188,4 +224,3 @@
     </div>
 </section>
 <!-- End: Social Network -->
-
