update trang admin

--- a/WebThuvien/Views/Home/CatagorySection.cshtml
+++ b/WebThuvien/Views/Home/CatagorySection.cshtml
@@ -22,7 +22,7 @@
                     {
                         <li class="category-item @item.MALINHVUC">
                             <figure>
-                                <img src="~/Content/ClientContent/images/category-filter/home-v2/category-filter-img-01.jpg" alt="New Releaase" />
+                                <img style="height:328px;width:100%" src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="New Releaase" />
                                 <figcaption class="bg-blue">
                                     <div class="diamond">
                                         <i class="book"></i>
