--- a/WebThuvien/Views/Home/HeaderSection.cshtml
+++ b/WebThuvien/Views/Home/HeaderSection.cshtml
@@ -32,7 +32,7 @@
                                     <div class="navbar-brand">
                                         <h1>
                                             <a href="/home">
-                                                <img src="~/Content/ClientContent/images/logo_thuvienso.png" alt="LIBRARIA" />
+                                                <img src="~/Content/ClientContent/images/logo_thuvienso.png" alt="Thư viện" />
                                             </a>
                                         </h1>
                                     </div>
@@ -41,8 +41,8 @@
                             <div class="col-sm-8">
                                 <div class="navbar-collapse hidden-sm hidden-xs">
                                     <ul class="nav navbar-nav">
-                                        <li><a href="/home">Trang chủ</a></li>
-                                        <li><a href="/sach">Sách &amp; Đa phương tiện</a></li>
+                                        <li><a id="home-nav" href="/home" style="color:#84bb45">Trang chủ</a></li>
+                                        <li><a id="sach-nav" href="/sach">Sách &amp; Đa phương tiện</a></li>
                                         <li class="dropdown">
                                             <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/news">Tin tức &amp; Sự kiện</a>
                                         </li>
@@ -59,52 +59,16 @@
                     <div id="mobile-menu">
                         <ul>
                             <li class="mobile-title">
-                                <h4>Navigation</h4>
+                                <h4>CHỨC NĂNG</h4>
                                 <a href="#" class="close"></a>
                             </li>
-                            <li>
-                                <a href="index-2.html">Home</a>
-                                <ul>
-                                    <li><a href="index-2.html">Home V1</a></li>
-                                    <li><a href="home-v2.html">Home V2</a></li>
-                                    <li><a href="home-v3.html">Home V3</a></li>
-                                </ul>
+                            <li><a id="home-nav" href="/home" style="color:#84bb45">Trang chủ</a></li>
+                            <li><a id="sach-nav" href="/sach">Sách &amp; Đa phương tiện</a></li>
+                            <li class="dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/news">Tin tức &amp; Sự kiện</a>
                             </li>
-                            <li>
-                                <a href="books-media-list-view.html">Books &amp; Media</a>
-                                <ul>
-                                    <li><a href="books-media-list-view.html">Books &amp; Media List View</a></li>
-                                    <li><a href="books-media-gird-view-v1.html">Books &amp; Media Grid View V1</a></li>
-                                    <li><a href="books-media-gird-view-v2.html">Books &amp; Media Grid View V2</a></li>
-                                    <li><a href="books-media-detail-v1.html">Books &amp; Media Detail V1</a></li>
-                                    <li><a href="books-media-detail-v2.html">Books &amp; Media Detail V2</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="news-events-list-view.html">News &amp; Events</a>
-                                <ul>
-                                    <li><a href="news-events-list-view.html">News &amp; Events List View</a></li>
-                                    <li><a href="news-events-detail.html">News &amp; Events Detail</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="signin.html">Signin/Register</a></li>
-                                    <li><a href="404.html">404/Error</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="blog.html">Blog</a>
-                                <ul>
-                                    <li><a href="blog.html">Blog Grid View</a></li>
-                                    <li><a href="blog-detail.html">Blog Detail</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="/services">Dịch vụ</a></li>
+                            <li><a href="/contact">Liên hệ</a></li>
                         </ul>
                     </div>
                 </div>
@@ -113,3 +77,5 @@
     </div>
 </header>
 <!-- End: Header Section -->
+
+
