--- a/WebThuvien/Views/Sach/Chitietsach.cshtml
+++ b/WebThuvien/Views/Sach/Chitietsach.cshtml
@@ -20,7 +20,7 @@
                             <div class="col-xs-12 col-sm-5 col-md-3">
                                 <div class="post-thumbnail">
                                     <div class="book-list-icon @ViewBag.loaisach.KIHIEU-icon"></div>
-                                    <img src="~/Content/ClientContent/images/Books/@ViewBag.sach.HINHANH" alt="Book Image">
+                                    <img style="height:330px;width:100%;" src="~/Content/ClientContent/images/Books/@ViewBag.sach.HINHANH" alt="Book Image">
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-7 col-md-6">
@@ -42,6 +42,15 @@
                                     <p><strong>Ngôn ngữ:</strong>@ViewBag.sach.NGONNGU</p>
                                     
                                     <p><strong>Ngày tải lên:</strong> @ViewBag.sach.NGAYTAILEN</p>
+                                    
+                                    <span class="rating">
+                                        <strong style="padding-top:5px;">Đánh giá  :</strong>
+                                        <span style="font-size:20px;">☆</span>
+                                        <span style="font-size:20px;">☆</span>
+                                        <span style="font-size:20px;">☆</span>
+                                        <span style="font-size:20px;">☆</span>
+                                        <span style="font-size:20px;">☆</span>
+                                    </span>
                                     <div class="actions">
                                         <ul>
 
