--- a/WebThuvien/Views/Sach/Timkiemsach.cshtml
+++ b/WebThuvien/Views/Sach/Timkiemsach.cshtml
@@ -67,7 +67,7 @@
                                 <li>
                                     <div class="book-list-icon light-green-icon"></div>
                                     <figure>
-                                        <a href="/Sach/Chitietsach?MaSach=@item.MASACH"><img src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book"></a>
+                                        <a href="/Sach/Chitietsach?MaSach=@item.MASACH"><img  style="height:435px;width:100%;" src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book"></a>
                                         <figcaption>
                                             <header>
                                                 <h4><a href="/Sach/Chitietsach?MaSach=@item.MASACH">@item.TENSACH</a></h4>
