--- a/WebThuvien/Views/Sach/Index.cshtml
+++ b/WebThuvien/Views/Sach/Index.cshtml
@@ -67,7 +67,7 @@
                                     <div class="book-list-icon light-green-icon"></div>
                                     <figure>
                                         <a href="/Sach/Chitietsach?MaSach=@item.MASACH">
-                                            <img src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book">
+                                            <img  style="height:435px;width:100%;" src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="Book">
                                         </a>
                                         <figcaption>
                                             <header>
